2015-01-16  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62134
	* g++.dg/cpp0x/alias-decl-46.C: New.

2015-01-16  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/arm-neon-ref.h (CHECK):
	Add trace.
        (CHECK_FP): Likewise.
        (CHECK_CUMULATIVE_SAT): Likewise.

2015-01-16  Christophe Lyon  <christophe.lyon@linaro.org>

        * gcc.target/aarch64/advsimd-intrinsics/arm-neon-ref.h
        (Set_Neon_Cumulative_Sat): Add parameter.
        (__set_neon_cumulative_sat): Support new parameter.
        * gcc.target/aarch64/advsimd-intrinsics/binary_sat_op.inc
        (TEST_BINARY_SAT_OP1): Call Set_Neon_Cumulative_Sat with new
        argument.
        * gcc.target/aarch64/advsimd-intrinsics/unary_sat_op.inc
        (TEST_UNARY_SAT_OP1): Call Set_Neon_Cumulative_Sat with new
        argument.

2015-01-16  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* g++.dg/tsan/vptr_benign_race.C: New testcase.
	* g++.dg/tsan/vptr_harmful_race.C: New testcase.

2015-01-16  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60056
	* g++.dg/tls/thread_local-ice4.C: New.

2015-01-16  James Greenhalgh  <james.greenhalgh@arm.com>

	* g++.dg/abi/mangle-abi-crypto.C: Add crypto options, rather
	than Neon options.

2015-01-16  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62276
	* g++.dg/cpp0x/vt-62276.C: New.

2015-01-16  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR middle-end/64353
	* g++.dg/pr64353.C: New.

2015-01-16  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/64263
	* gcc.target/aarch64/pr64263_1.c: New test.

2015-01-16  Yuri Rumyantsev  <ysrumyan@gmail.com>

	PR tree-optimization/64434
	* gcc.dg/torture/pr64434.c: Move to...
	* gcc.dg/pr64434.c: ... here.

2015-01-16  Richard Biener  <rguenther@suse.de>

	PR middle-end/64614
	* gcc.dg/uninit-18.c: New testcase.

2015-01-16  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/64568
	* g++.dg/torture/pr64568-2.C: New testcase.
